Blu Ray videos are incorrect shown on Windows 10 x64 -
this is independant of the vlc version
( tested official vlc-3.0.0 and nightly update of vlc-4.0.0 )
There is no problem on the same computer when running Linux
( fedora 27 with vlc-3.0.0 or openSUSE 42.3 with vlc-4.0.0 )
The PC is a Fujitsu Esprimo P900 with Intel Core i5-2400 and Intel HD Graphics 2000.
Edited
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
The hardware decoding was for Windows and Linux "automatic".
The problem for windows 10 does not exist for hardware decoding disabled.
Jean-Baptiste Kempfchanged title from graphical presentation errors for bluray videos on windows 10 x64 creators update 1709 to Graphical glitches for bluray videos with hardware decoding on windows 10 x64 creators update 1709
changed title from graphical presentation errors for bluray videos on windows 10 x64 creators update 1709 to Graphical glitches for bluray videos with hardware decoding on windows 10 x64 creators update 1709
I don't think that you can compare the vlc windows version with the vlc version 4.0.0 on openSUSE Leap 42.3.
The systems have different graphic drivers and the available options for
Preferences -> Input/Codes -> Hardware accelerated decoding are for Windows and openSUSE different
on Windows you can select from :\
Automatic\
Direct3D11 Video Acceleration\
DirectX Video Acceleration (DXVA) 2.0\
Disable
on openSUSE you have\
Automatic\
VA-API Video decoding\
VDPAU Video decoding\
VA-API Video decoding via DRM\
disable
Alternate from my video on my google drive you can also download a video from
http://serienjunkies.org/serie/designated-survivor/
e.g. Designated.Survivor.S02E15.Summit.German.Synced.DL.AmazonHD.x264-TVS
to unrar the file you need the password serienjunkies.org
It's an old Intel GPU so it doesn't work in D3D11, it fallbacks to D3D9 support. But it should work anyway. For D3D11 support you may force DIRECT3D11 as the video output and D3D11VA for the video decoder. It may help.
Other than that it's using the Intel ClearVideo H.264 decoder instead of the regular one that is also available. I changed the priority between these 2 decoders. We'll see if it helps. You will be able to try it in the nightlies built tonight (so available tomorrow).