directx_va: favor the regular H.264 decoder to the Intel Clear Video one

Ref #19878